# chronicle-external-query

./: .actrc  .env.local.plugins.example  .gitignore  README.ja.md  README.md  pyproject.toml
.github/act/: release-dispatch.event.json  release-dispatch.optional-plugins.event.json
.github/workflows/: ci.yml  release.yml
contracts/chronicle/: README.md  query-engine-bundle-contract-notes.md  query-engine-bundle-contract-source-map.md
docs/: architecture.md  chronicle-trial-alignment.md  chronicle-writeback-boundary.md  clean-checkout.md  coding-guidelines.md  development-workflow.md  evaluation.md  extension-roadmap.md  i18n-strategy.md  operator-runbook.md  pluggable-extension-spec.md  retrieval-contract.md  roadmap.md  runtime-answer-contract.md  runtime-boundary.md  testing-strategy.md
docs/adr/: ADR-001-downstream-consumer-development-and-testing-discipline.md  ADR-002-downstream-runtime-localization-and-language-selection.md  ADR-003-chronicle-writeback-remains-out-of-scope.md  README.md
docs/releases/: release-automation.md  (+11 more)
scripts/: bootstrap_plugin_env.sh  check_plugin_compatibility.py  generate_release_notes.py  operator_capture.sh  operator_preflight.sh  release_candidate_gate.sh  run_local_act.sh  smoke_clean_checkout.sh
tests/: conftest.py  test_answer_runtime.py  test_bootstrap_plugin_env_script.py  test_cli.py  test_evaluation_artifacts.py  test_fixture_registry.py  test_graph_retriever.py  test_handoff_loader.py  test_hybrid_retriever.py  test_local_act_script.py  test_messages.py  test_operator_capture_script.py  test_operator_preflight_script.py  test_plugin_loader.py  test_release_automation.py  test_retrieval_fixture_regression.py  test_runtime_representative_bundle.py
(+60 files in other folders)
