[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chronicle-external-query"
version = "0.1.0"
description = "External query runtime scaffolding for Chronicle-derived bundles."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "zyx-corporation" }
]
dependencies = []

[project.scripts]
chronicle-external-query = "chronicle_external_query.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
